# clutils

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/clutils/: clutils.h
src/: clutils.cpp
tests/: CMakeLists.txt  test.cpp
